--- a/sharetech/static/sharetech/css/profile_edit.css
+++ b/sharetech/static/sharetech/css/profile_edit.css
@@ -233,3 +233,39 @@
     font-size: 1.2em;
     font-weight: bold;
 }
+
+/* 相談窓口作成 */
+.form_item .cat_title{
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.form_item .cat_flex input[type=checkbox]{
+    display: none;
+}
+
+.form_item .big_cat_name{
+    font-size: 1.2em;
+}
+
+.form_item .cat_flex{
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    margin-bottom: 1em;
+}
+
+.form_item .cat_flex label{
+    margin-right: .5em;
+    padding: 0 .5em;
+    text-align: center;
+    font-size: .8em;
+    font-weight: lighter;
+    border-radius: 10px;
+    border: 1px solid #2699FB;
+}
+
+.form_item .cat_flex input[type="checkbox"]:checked + label{
+    background-color: #2699FB;
+    color: white;
+}
