--- a/sharetech/static/sharetech/css/consult_window_detail.css
+++ b/sharetech/static/sharetech/css/consult_window_detail.css
@@ -1,3 +1,24 @@
+.edit_btn{
+    margin: 1.2em 20%;
+    text-align: right;
+}
+
+.edit_btn a{
+    color: white;
+    background-color: tomato;
+    font-size: 1.4em;
+    border-radius: 1em;
+    padding: .5em 1em;
+    font-weight: bold;
+    text-align: left;
+    box-shadow: 2px 2px 2px #C0C0C0;
+    transition: .5s;
+}
+
+.edit_btn a:hover{
+    box-shadow: 6px 6px 12px #C0C0C0;
+}
+
 .consult_window{
     width: 100%;
     margin-bottom: 5em;
