--- a/sharetech/templates/sharetech/consult_window_edit.html
+++ b/sharetech/templates/sharetech/consult_window_edit.html
@@ -11,6 +11,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.js"></script>
 <script src="{% static 'sharetech/js/common.js' %}"></script>
+<script src="{% static 'sharetech/js/consult_window.js' %}"></script>
+
 {% endblock %}
 
 {% block main %}
@@ -19,6 +21,9 @@
 
     <div class="form_container">
         <form action="" method="POST" enctype="multipart/form-data">
+            <div class="delete_btn">
+                <img src="{% static 'sharetech/img/delete_icon.png' %}" alt="">
+            </div>    
             {% csrf_token %}
             {% if form.errors %}
             <div class="error_msg">
@@ -27,23 +32,23 @@
                 {% endfor %}
             </div>
             {% endif %}
-            <div class="form_item role_input">
+            <div class="form_item role_input title">
                 <label for="username">{{form.consult_window_title.label}}</label>
                 {{form.consult_window_title}}
             </div>
-            <div class="form_item large_input">
+            <div class="form_item large_input overview">
                 <label for="name">{{form.consult_window_overview.label}}</label>
                 {{form.consult_window_overview}}
             </div>
-            <div class="form_item large_input">
+            <div class="form_item large_input archivement">
                 <label for="name">{{form.archivement.label}}</label>
                 {{form.archivement}}
             </div>
-            <div class="form_item">
+            <div class="form_item price">
                 <label for="name">{{form.consult_price.label}}</label>
                 {{form.consult_price}}
             </div>
-            <div class="form_item">
+            <div class="form_item url">
                 <label for="name">{{form.timerex_url.label}}</label>
                 {{form.timerex_url}}
             </div>
@@ -68,6 +73,16 @@
             <div class="btn_area">
                 <a href="{% url 'profile' %}" class="return_btn">戻る</a>
                 <input class="submit_btn" type="submit" value="確認">
+            </div>
+            <div class="delete_overlay hidden">
+                <div class="delete_confirm">
+                    <p class="message">この相談窓口を削除してもよろしいですか？</p>
+                    <input class="delete_flg" type="checkbox" name='delete_flg' value="1">
+                    <div class="flex">
+                        <p>編集に戻る</p>
+                        <input class="submit_btn" type="submit" value="はい、削除します">
+                    </div>
+                </div>
             </div>
         </form>    
     </div>
