--- a/sharetech/templates/sharetech/consult_window_edit.html
+++ b/sharetech/templates/sharetech/consult_window_edit.html
@@ -21,9 +21,11 @@
 
     <div class="form_container">
         <form action="" method="POST" enctype="multipart/form-data">
+            {% if is_deletable == 1 %}
             <div class="delete_btn">
                 <img src="{% static 'sharetech/img/delete_icon.png' %}" alt="">
-            </div>    
+            </div>
+            {% endif %}
             {% csrf_token %}
             {% if form.errors %}
             <div class="error_msg">
@@ -74,6 +76,7 @@
                 <a href="{% url 'profile' %}" class="return_btn">戻る</a>
                 <input class="submit_btn" type="submit" value="確認">
             </div>
+            {% if is_deletable == 1 %}
             <div class="delete_overlay hidden">
                 <div class="delete_confirm">
                     <p class="message">この相談窓口を削除してもよろしいですか？</p>
@@ -84,6 +87,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
         </form>    
     </div>
 </div>
