メールアドレス変更時処理修正

--- a/sharetech/templates/sharetech/mypage.html
+++ b/sharetech/templates/sharetech/mypage.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content %}
-{% if role == 1 %}
+{% if role == '1' %}
 <div class="create_btn">
     <a href="{% url 'consult_window_register' %}">相談窓口を作る</a>
 </div>
@@ -75,7 +75,7 @@
             <div class="applyed active" control_flg='0'>
                 <p>相談申込履歴</p>
             </div>
-            {% if role == 1%}
+            {% if role == '1' %}
             <div class="created" control_flg='1'>
                 <p>作成窓口一覧</p>
             </div>
