wip: password reset page

--- a/sharetech/templates/sharetech/login.html
+++ b/sharetech/templates/sharetech/login.html
@@ -46,6 +46,7 @@
                     <input type="submit" class="button" title="Sign In" value="ログイン">
                 </div>
             </form>
+            <p><a href="{% url 'password_reset' %}">Forgot Your Password?</a></p>
 
             <!-- SSO未実装のため一時コメントアウト -->
             <!-- <h2>別のアカウントを使う</h2>
