--- a/sharetech/templates/sharetech/landing.html
+++ b/sharetech/templates/sharetech/landing.html
@@ -42,7 +42,7 @@
             <a class="link_inquiry" href="https://www.wrike.com/form/eyJhY2NvdW50SWQiOjQzMzUzNjEsInRhc2tGb3JtSWQiOjU5OTYyNn0JNDc5MTY3NzYzNjk4Ngk3NjAxZDQyZTNlMDUwNmJmNTgwMzFlMWM5ZDVhODkyNThhNmEzYjlhMWM5MjlmMGNkN2E1YWVhNWE2MWYxNDgy">
                 <p>お問い合わせ</p>
             </a>
-            <a class="link_login" href="/login/?next=/">
+            <a class="link_login" href="/login">
                 <p>ログイン</p>
             </a>
         </div>
