--- a/sharetech/templates/sharetech/register.html
+++ b/sharetech/templates/sharetech/register.html
@@ -17,7 +17,7 @@
 <body>
     <header class="register_header">
         <h1>
-            Wellcome to <span>SHARE TECH</span>!
+            Welcome to <span>SHARE TECH</span>!
         </h1>
     </header>
 
