modify url validation and column name

--- a/sharetech/templates/sharetech/consult_window_detail.html
+++ b/sharetech/templates/sharetech/consult_window_detail.html
@@ -77,7 +77,7 @@
         </div>
         {% else %}
         <div class="apply_btn">
-            <button class="button" redirect="{{timerexUrl}}">申込に進む</button>
+            <button class="button" redirect="{{schedulerUrl}}">申込に進む</button>
         </div>
         {% endif %}
     </div>
