--- a/sharetech/templates/sharetech/consult_window_edit.html
+++ b/sharetech/templates/sharetech/consult_window_edit.html
@@ -51,8 +51,8 @@
                 {{form.consult_price}}
             </div>
             <div class="form_item url">
-                <label for="name">{{form.timerex_url.label}}</label>
-                {{form.timerex_url}}
+                <label for="name">{{form.scheduler_url.label}}</label>
+                {{form.scheduler_url}}
             </div>
 
             <div class="form_item">
