fix profile edit reference

--- a/sharetech/templates/sharetech/profile_edit.html
+++ b/sharetech/templates/sharetech/profile_edit.html
@@ -76,16 +76,16 @@
                 {{form.company}}
             </div>
             <div class="form_item">
-                <label for="name">{{form.occupation_name.label}}</label>
-                {{form.occupation_name}}
+                <label for="name">{{form.occupation_id.label}}</label>
+                {{form.occupation_id}}
             </div>
             <div class="form_item">
-                <label for="name">{{form.industry_name.label}}</label>
-                {{form.industry_name}}
+                <label for="name">{{form.industry_id.label}}</label>
+                {{form.industry_id}}
             </div>
             <div class="form_item">
-                <label for="name">{{form.position_name.label}}</label>
-                {{form.position_name}}
+                <label for="name">{{form.position_id.label}}</label>
+                {{form.position_id}}
             </div>
             <div class="form_item specialize_input_area">
                 <label for="name">{{specialize_title}}</label>
