--- a/sharetech/templates/sharetech/password_reset.html
+++ b/sharetech/templates/sharetech/password_reset.html
@@ -1,8 +1,62 @@
-{% block content %}
-<h2>Password Reset Form</h2>
-<form method="post" style="padding-left:20px;">
-{% csrf_token %}
-{{ form.as_p }}
-<button type="submit">Reset Password</button>
-</form>
-{% endblock %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="discription" content="パスワードリセットページ">
+    <title>Password Reset</title>
+    
+    <link rel="stylesheet" href="{% static 'sharetech/css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'sharetech/css/password_reset_page.css' %}">
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.js"></script>
+</head>
+
+
+<body>
+    <header class="password_reset_header">
+        <h1>
+            <img src="{% static 'sharetech/img/logo_login_page.png' %}">
+        </h1>
+    </header>
+
+    <main>
+        <!--パスワードリセットフォーム-->
+        <div class="form_wrapper">
+            {% if form.errors %}
+            <div class="error_msg">
+                {% for field, error in form.errors.items %}
+                <p>{{error|striptags}}</p>
+                {% endfor %}
+            </div>
+            {% else %}
+            <h1>Reset Password</h1>
+            {% endif %}
+            <form method="POST">
+                {% csrf_token %}
+                    <div class="form_item">
+                        {{ form.as_p }}
+                    </div>
+                <div class="reset_button">
+                    <input type="submit" class="button" title="Reset password" value="リセットする">
+                </div>
+            </form>
+
+            <div class="form_footer">
+                <p><a href="{% url 'register' %}">Create an account</a></p>
+                <p><a href="{% url 'login' %}">Login</a></p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="password_reset_page_copyright"><p>©2021 ShareTech Co., Ltd., All rights reserved</p></div>
+    </footer>
+</body>
+
+
+
+
+
+
