--- a/sharetech/templates/sharetech/password_reset_complete.html
+++ b/sharetech/templates/sharetech/password_reset_complete.html
@@ -1,5 +1,38 @@
-{% block content %}
-<h2>Password reset complete</h2>
-<p>Your password has been set. You may go ahead and log in now.</p>
-<p><a href="{% url 'login' %}">Login</a></p>
-{% endblock %}
+<!DOCTYPE html>
+{% load static %}
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="discription" content="パスワードリセットページ">
+    <title>Password Reset</title>
+    
+    <link rel="stylesheet" href="{% static 'sharetech/css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'sharetech/css/password_reset_page.css' %}">
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.js"></script>
+</head>
+
+
+<body>
+    <header class="password_reset_header">
+        <h1>
+            <img src="{% static 'sharetech/img/logo_login_page.png' %}">
+        </h1>
+    </header>
+
+    <main>
+        <div class="msg_box_wrapper">
+            <h2>Password reset complete</h2>
+            <div class="login_button">
+                <button class="button">
+                    <a href="{% url 'login' %}">ログイン</a>
+                </button>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="password_reset_page_copyright"><p>©2021 ShareTech Co., Ltd., All rights reserved</p></div>
+    </footer>
+</body>
