--- a/sharetech/templates/sharetech/_header.html
+++ b/sharetech/templates/sharetech/_header.html
@@ -23,6 +23,12 @@
           <img src="{% static 'sharetech/img/logo_header.png' %}">
         </a>
       </h1>
+
+      <div class="home_icon">
+        <a href="{% url 'top' %}">
+          <img src="{% static 'sharetech/img/home_icon.png' %}">
+        </a>
+      </div>
     </div>
 
     <div class="global_nav">
@@ -67,6 +73,12 @@
           <img src="{% static 'sharetech/img/logo_header.png' %}">
         </a>
       </h1>
+
+      <div class="home_icon">
+        <a href="{% url 'top' %}">
+          <img src="{% static 'sharetech/img/home_icon.png' %}">
+        </a>
+      </div>
     </div>
 
     <div class="global_nav">
