利用規約ページの作成（デザインは未確定）

--- a/sharetech/templates/sharetech/_footer.html
+++ b/sharetech/templates/sharetech/_footer.html
@@ -6,7 +6,7 @@
                 <a href="">シェアテックについて</a>
             </li>
             <li>
-                <a href="">利用規約</a>
+                <a href="{% url 'rule' %}">利用規約</a>
             </li>
             <li>
                 <a href="https://www.wrike.com/frontend/requestforms/index.html?token=eyJhY2NvdW50SWQiOjQzMzUzNjEsInRhc2tGb3JtSWQiOjU5OTYyNn0JNDc5MTY3NzYzNjk4Ngk3NjAxZDQyZTNlMDUwNmJmNTgwMzFlMWM5ZDVhODkyNThhNmEzYjlhMWM5MjlmMGNkN2E1YWVhNWE2MWYxNDgy">お問い合せ</a>
