--- a/sharetech/static/sharetech/css/password_reset_page.css
+++ b/sharetech/static/sharetech/css/password_reset_page.css
@@ -123,6 +123,20 @@
     width: 100%;
     padding: .5em;
     }
+
+    .form_wrapper .form_item ul{
+      margin: 20px 0px;
+      font-weight: bold;
+    }
+
+    .form_wrapper .form_item .helptext{
+      margin: 20px 0px;
+    }
+
+    .form_wrapper .form_item .errorlist{
+      color: red;
+    }
+
   
     .form_wrapper .form_item input::placeholder{
       color: #2699FB;
